--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
   <a href="page2.html" class="Round1">Round 1</a>
   <a href="page3.html" class="Round2">Round 2</a>
-  <h1>HACK-A-THON</h1>
+  <h1>HACKATHON</h1>
   <img class="logo" src="images/Samashti.png" alt="">
   <img class="CI" src="crackillusion.png" alt="">
 </body>
